# mdit

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.ko.md  README.md  README.zh.md  biome.jsonc  components.json  drizzle.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vite.config.ts
.cursor/rules/: ultracite.mdc
.github/workflows/: build-windows-test.yaml  pr-checks.yml  release.yaml
apps/auth/: .env.example  drizzle.config.ts  package.json  worker-configuration.d.ts  wrangler.jsonc
apps/desktop/: components.json  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: appdata.rs  database.rs  file_opener.rs  image_processing.rs  indexing_commands.rs  lib.rs  main.rs  migrations.rs  preview.rs  trash.rs  vault.rs
apps/desktop/src-tauri/src/app/: file_opening.rs  mod.rs  window_lifecycle.rs
apps/desktop/src-tauri/src/commands/: content.rs  credentials.rs  filesystem.rs  image.rs  local_api.rs  mod.rs  ollama.rs  vault_indexing.rs  vault_watch.rs  window.rs
apps/desktop/src-tauri/src/indexing/: mod.rs  search.rs  sync.rs
apps/desktop/src-tauri/src/indexing/sync/: doc_repo.rs  policy.rs
apps/desktop/src-tauri/src/indexing/tests/: search_scenarios.rs  test_support.rs
apps/desktop/src-tauri/src/local_api/: mcp_sdk_server.rs  mod.rs  router.rs  test_support.rs  tests_mcp.rs  tests_rest.rs
apps/desktop/src-tauri/src/persistence/: mod.rs
apps/sync/: .env.example  .gitignore  drizzle.config.ts  package.json  tsconfig.json  vitest.config.mts  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
apps/sync-cli/: Cargo.toml
apps/sync-cli/src/: app.rs  auth.rs  cli.rs  config.rs  http.rs  lib.rs  main.rs  store.rs
apps/www/: .gitignore  app.config.ts  astro.config.mjs  content-collections.ts  package.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
crates/app-storage/: Cargo.toml
crates/credentials/: Cargo.toml
crates/image-core/: Cargo.toml
crates/image-processing/: Cargo.toml
crates/indexing/: Cargo.toml
crates/indexing-core/: Cargo.toml
crates/indexing-core/src/: lib.rs
crates/indexing-core/src/indexing/: embedding.rs  mod.rs  sync.rs
crates/indexing-core/src/indexing/sync/: link_refresh.rs  segment_sync.rs
crates/indexing-core/src/indexing/tests/: note_scenarios.rs  test_support.rs
crates/local-api/: Cargo.toml
crates/local-api-core/: Cargo.toml
crates/note/: Cargo.toml
crates/note-core/: Cargo.toml
crates/ollama-client/: Cargo.toml
crates/sync-client/: Cargo.toml  README.md
crates/sync-client/src/: error.rs  helpers.rs  lib.rs  pull.rs  push.rs  traits.rs  types.rs
crates/sync-client/src/tests/: harness.rs  mod.rs
crates/sync-engine/: Cargo.toml  README.md
crates/sync-engine/src/: apply.rs  constants.rs  crypto.rs  lib.rs  manifest.rs  push.rs  scan.rs  store.rs  types.rs  util.rs
crates/sync-engine/src/apply/: conflicts.rs  materializer.rs  service.rs  state.rs  validator.rs
crates/sync-engine/src/crypto/: codec.rs
crates/sync-engine/src/scan/: matcher.rs  service.rs  walker.rs
crates/sync-engine/src/tests/: apply.rs  crypto.rs  harness.rs  mod.rs  push.rs  scan.rs
crates/sync-runtime/: Cargo.toml
crates/sync-runtime/src/: config.rs  db.rs  error.rs  lib.rs  progress.rs  remote.rs  store.rs  sync.rs
crates/sync-runtime/src/continuous/: journal.rs  mod.rs  runner.rs  session.rs  types.rs
crates/vault-indexer/: Cargo.toml
crates/vault-indexer/src/: lib.rs  rewrite.rs  runtime.rs
crates/vault-indexing/: Cargo.toml
crates/vault-indexing-api/: Cargo.toml
crates/vault-watch/: Cargo.toml
crates/vault-watch/src/: engine.rs  entry_index.rs  event_projector.rs  lib.rs  normalize.rs  observe.rs  path.rs  scan.rs  types.rs  worker.rs
crates/vault-watch/src/normalize/: dir_index.rs  emit.rs  event_ingest.rs  mod.rs  tests.rs
crates/vault-watch/src/observe/: tests.rs
src/: app.tsx  globals.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/db/migrations/: 0000_clean_nightmare.sql  0000_famous_doctor_faustus.sql  0000_high_mantis.sql  0000_robust_dazzler.sql  0001_little_inhumans.sql  0001_sticky_chat.sql
src-tauri/db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_appdata_vault_indexing.sql  0001_vault_embedding_config.sql
src-tauri/src/: copy.rs  database.rs  file_opener.rs  image_processing.rs  indexing.rs  lib.rs  markdown_text.rs  migrations.rs  preview.rs  sqlite_vec_ext.rs  vault.rs
src-tauri/src/indexing/: chunking.rs  embedding.rs  files.rs  links.rs  mod.rs  search.rs  sync.rs  tests.rs
src-tauri/src/indexing/chunking/: STRATEGY.md  tests.rs
src-tauri/src/indexing/links/: tests.rs
src-tauri/src/indexing/sync/: link_refresh.rs  segment_sync.rs  tests.rs
src-tauri/src/indexing/tests/: chunking_scenarios.rs  graph_scenarios.rs  link_scenarios.rs  mod.rs  sync_scenarios.rs  test_support.rs
src/contexts/: confetti-context.tsx  dnd-provider.tsx  drop-context.tsx  focus-mode-context.tsx  screen-capture-context.tsx  tab-context.tsx  theme-context.tsx
src/db/: schema.ts
src/hooks/: use-auto-close-sidebars.ts  use-auto-indexing.ts  use-current-window-label.ts  use-debounce.ts  use-editor-only-mode.ts  use-file-explorer-resize.ts  use-font-scale.ts  use-git-sync.ts  use-is-fullscreen.ts  use-is-touch-device.ts  use-resizable-panel.ts  use-semantic-note-search.ts  use-windows-10.ts
src/lib/: ollama.ts  settings-utils.ts
src/repositories/: file-system-repository.ts  user-settings-repository.ts  workspace-history-repository.ts  workspace-settings-repository.ts
src/services/: git-service.ts  indexing-service.ts
src/store/: ai-settings-store.ts  ai-settings-store.tsx  collection-store.tsx  constants.ts  (+20 more)
todos/: store-followup-prs.md
(+865 files in other folders)
