[package]
name = "mdit"
version = "0.0.0"
description = "Mdit"
authors = ["hhhjin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mdit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-keyring = "0.1.0"
tauri-plugin-process = "2"
trash = "5.2.3"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
include_dir = "0.7.4"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1.6"
walkdir = "2"
blake3 = "1"
ollama-rs = "0.3.2"
tiktoken-rs = "0.5"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["simd"] }
image = "0.25.9"
webp = "0.3"
tauri-plugin-http = "2"
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
foreign-types = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
