[package]
name = "mdit-sync-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "mdit-sync"
path = "src/main.rs"

[dependencies]
dirs = "6"
keyring = "3.6.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
