[package]
name = "sync-engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
chacha20poly1305 = "0.10"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
diff-match-patch-rs = "0.5.1"

[dev-dependencies]
app-storage = { path = "../app-storage" }
