[package]
name = "vault-indexer"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1"
vault-indexing-api = { path = "../vault-indexing-api" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
vault-watch = { path = "../vault-watch" }
regex = "1"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["simd"] }
pathdiff = "0.2"
