[package]
name = "mdit"
version = "0.0.0"
description = "Mdit"
authors = ["hhhjin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mdit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
app-storage = { path = "../../../crates/app-storage" }
image-processing = { path = "../../../crates/image-processing" }
mdit-indexing = { package = "indexing", path = "../../../crates/indexing" }
mdit-local-api = { package = "local-api", path = "../../../crates/local-api" }
mdit-note = { package = "note", path = "../../../crates/note" }
tauri = { version = "2.10.2", features = [ "macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8.4", default-features = false, features = ["http1", "tokio", "json"] }
rmcp = { version = "0.16.0", features = [
  "client",
  "reqwest-native-tls",
  "transport-streamable-http-server",
  "transport-streamable-http-client-reqwest",
] }
tokio = { version = "1", features = ["net", "rt", "sync"] }
tower = "0.5.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = { version = "2.4.5", features = ["watch"] }
tauri-plugin-keyring = "0.1.0"
tauri-plugin-oauth = "2.0.0"
tauri-plugin-process = "2.3.1"
trash = "5.2.3"
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2.3.2"
anyhow = "1"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-http = "2.5.7"
urlencoding = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-updater = "2.10.0"
tauri-plugin-single-instance = "2.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSButton", "NSControl", "NSView", "NSWindow"] }
